# sys-probe

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: basic_info.rs  main.rs
src/hardware/: gpu.rs  mod.rs  processor.rs
src/utils/: error.rs  mod.rs
