[package]
name = "sys-probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = {version = "0.51", features = ["Win32_System_Com", "Win32_System_Wmi", "Win32_Security", "Win32_System_Variant", "Win32_Foundation", "Win32_System_Ole", "Win32_System_Registry"]}
chrono = "0.4.28"